feat: add favicon, improve group search

--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="shortcut icon"
+      href="https://xn--j1al4b.xn--p1ai/static/logo.png"
+      type="image/png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RCE Schedule</title>
+    <title>Расписание РКЭ</title>
   </head>
   <body>
     <div id="root"></div>
