--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       type="image/png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Ежедневное расписание пар для Рязанского колледжа электроники (РКЭ)"
+    />
     <title>Расписание РКЭ</title>
   </head>
   <body>
