--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <title>Расписание РКЭ</title>
   </head>
-  <body>
+  <body class="bg-white dark:bg-neutral-900">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
